# Accounting

./: .env  .env.example  .gitignore  init_db.md  pyproject.toml  readme.md  requirements.txt
app/: main.py
app/api/: deps.py
app/api/routers/: entries.py  executors.py  managers.py  users.py
app/core/: config.py
app/db/: session.py  utils.py
app/models/: entry.py  executor.py  manager.py  mixins.py  user.py
app/schemas/: common.py  entry.py  executor.py  manager.py  user.py
app/services/: entry_service.py
migrations/: env.py
migrations/versions/: 1c4167677f29_init.py
