[tool.poetry]
name = "fastapi-accounting"
version = "0.1.0"
description = "MVP accounting API (users, executors, managers, entries)"
authors = ["<andreylepokurov@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
SQLAlchemy = "^2.0.32"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
pydantic = "^2.9.0"
pydantic-settings = "^2.4.0"
python-multipart = "^0.0.9"
alembic = "^1.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
httpx = "^0.27.0"
ruff = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"